--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -85,11 +85,15 @@
 
 <div class="row">
     <div class="col-sm-3">
-        <div class="columnPanel">
+        <div class="columnPanel todoColumn"
+            cdkDropList
+            #notStartedList="cdkDropList"
+            [cdkDropListData]="todoList"
+            [cdkDropListConnectedTo]="[inProgressList]"
+            (cdkDropListDropped)="onDrop($event,2)">
             <p class="colHeader">Todo</p>
-            <!-- <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"> --> 
             <div *ngFor="let todo of todoList">
-                <div *ngIf="todo.status == 'not started'"class="card" (click)="getTodo(todo)">
+                <div *ngIf="todo.status == 'not started'" cdkDrag class="card" (click)="getTodo(todo)">
                     <div class="controlContainer">
                         <ion-icon name="create-outline" data-toggle="modal" data-target="#myModal"></ion-icon>
                         <ion-icon name="trash-outline" data-toggle="modal" data-target="#deleteModal"></ion-icon>
@@ -102,18 +106,18 @@
         </div> 
     </div>
     <div class="col-sm-3"> 
-        <div class="columnPanel" 
+        <div class="columnPanel inProgressColumn" 
             cdkDropList
             #inProgressList="cdkDropList"
             [cdkDropListData]="todoList"
             [cdkDropListConnectedTo]="[doneList]"
-            (cdkDropListDropped)="onDrop($event)">
+            (cdkDropListDropped)="onDrop($event,2)">
             <p class="colHeader">In Progress</p>
             <div *ngFor="let todo of todoList">
                 <div *ngIf="todo.status == 'In Progress'" cdkDrag class="card" (click)="getTodo(todo)">
                     <div class="controlContainer">
                         <ion-icon name="create-outline" data-toggle="modal" data-target="#myModal"></ion-icon>
-                        <ion-icon name="trash-outline" (click)="deleteTodo(todo._id)"></ion-icon>
+                        <ion-icon name="trash-outline" data-toggle="modal" data-target="#deleteModal"></ion-icon>
                     </div>
                     <h5 class="title">{{todo.title}}</h5>
                     <div class="disc">{{todo.description}}</div>
@@ -124,18 +128,18 @@
         </div>
     </div>
     <div class="col-sm-3"> 
-        <div class="columnPanel" 
+        <div class="columnPanel doneColumn" 
             cdkDropList
             #doneList="cdkDropList"
             [cdkDropListData]="todoList"
             [cdkDropListConnectedTo]="[inProgressList]"
-            (cdkDropListDropped)="onDrop($event)"> 
+            (cdkDropListDropped)="onDrop($event,3)"> 
             <p class="colHeader">Done</p>
             <div *ngFor="let todo of todoList">
                 <div *ngIf="todo.status == 'Done'" cdkDrag class="card" (click)="getTodo(todo)">
                     <div class="controlContainer">
                         <ion-icon name="create-outline" data-toggle="modal" data-target="#myModal"></ion-icon>
-                        <ion-icon name="trash-outline" (click)="deleteTodo(todo._id)"></ion-icon>
+                        <ion-icon name="trash-outline" data-toggle="modal" data-target="#deleteModal"></ion-icon>
                     </div>
                     <h5 class="title">{{todo.title}}</h5>
                     <div class="disc">{{todo.description}}</div> 
@@ -145,9 +149,24 @@
         </div>
     </div>
     <div class="col-sm-3">
-        <div class="columnPanel">
+        <div class="columnPanel onHoldColumn" 
+            cdkDropList
+            #doneList="cdkDropList"
+            [cdkDropListData]="todoList"
+            [cdkDropListConnectedTo]="[inProgressList]"
+            (cdkDropListDropped)="onDrop($event,4)"> 
             <p class="colHeader">On hold</p>
-            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"> 
+            <div *ngFor="let todo of todoList">
+                <div *ngIf="todo.status == 'On hold'" cdkDrag class="card" (click)="getTodo(todo)">
+                    <div class="controlContainer">
+                        <ion-icon name="create-outline" data-toggle="modal" data-target="#myModal"></ion-icon>
+                        <ion-icon name="trash-outline" data-toggle="modal" data-target="#deleteModal"></ion-icon>
+                    </div>
+                    <h5 class="title">{{todo.title}}</h5>
+                    <div class="disc">{{todo.description}}</div> 
+                    <div class="date">Due date : {{todo.dueDate}}</div>
+                </div>  
+            </div>
         </div>
     </div>
   </div> 
